[gd_scene load_steps=8 format=3 uid="uid://cdntjd2eulh33"]

[ext_resource type="Script" uid="uid://dhcavtbikkvhx" path="res://enemies/enemy_2.gd" id="1_isev2"]
[ext_resource type="Texture2D" uid="uid://cbmhhxq0vmvq6" path="res://Assets/Foozle_2DS0012_Void_EnemyFleet_1/Kla'ed/Base/PNGs/Kla'ed - Scout - Base.png" id="2_isev2"]
[ext_resource type="Texture2D" uid="uid://ckiviagrlg2nb" path="res://Assets/Foozle_2DS0012_Void_EnemyFleet_1/Kla'ed/Destruction/PNGs/Kla'ed - Scout - Destruction.png" id="3_k5103"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uwsmo"]
size = Vector2(22, 23)

[sub_resource type="Animation" id="Animation_0cb6b"]
length = 0.001
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DeathSprite_EN_2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_m1wwl"]
resource_name = "death_enemy_2"
length = 1.3
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DeathSprite_EN_2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 9]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0l7gw"]
_data = {
&"RESET": SubResource("Animation_0cb6b"),
&"death_enemy_2": SubResource("Animation_m1wwl")
}

[node name="CharacterBody_enemy_2" type="CharacterBody2D" groups=["enemies"]]
collision_layer = 4
collision_mask = 2
script = ExtResource("1_isev2")

[node name="enemy_2_Scout" type="Sprite2D" parent="."]
texture_filter = 1
rotation = 4.71239
texture = ExtResource("2_isev2")

[node name="CollisionShape_enemy_2" type="CollisionShape2D" parent="."]
position = Vector2(2, 0.5)
shape = SubResource("RectangleShape2D_uwsmo")

[node name="BulletTimer" type="Timer" parent="." groups=["enemies"]]
wait_time = 2.0
autostart = true

[node name="DeathSprite_EN_2" type="Sprite2D" parent="."]
texture_filter = 1
rotation = 4.71239
texture = ExtResource("3_k5103")
hframes = 10

[node name="AnimationPlayer_EN_2" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_0l7gw")
}

[connection signal="timeout" from="BulletTimer" to="." method="_on_bullet_timer_timeout"]
